--- a/WebApplication800000/WebApplication800000.csproj
+++ b/WebApplication800000/WebApplication800000.csproj
@@ -285,6 +285,7 @@
     <Content Include="Views\Product\Productshowcase.cshtml" />
     <Content Include="Views\Product\Shoppingcart.cshtml" />
     <Content Include="Views\Product\Singleproduct.cshtml" />
+    <Content Include="Views\Customers\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
