--- a/WebApplication800000/Web.config
+++ b/WebApplication800000/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="server=145.24.222.102;Database=sys;Uid=root;Pwd=Project56;" providerName="MySql.Data.MySqlClient"/>
+    <add name="DefaultConnection" connectionString="server=145.24.222.102;Database=sys;Uid=root;Pwd=Project56;"
+      providerName="MySql.Data.MySqlClient" />
+    <add name="WebApplication800000Context" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=WebApplication800000Context-20170130150841; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|WebApplication800000Context-20170130150841.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
