--- a/WebApplication800000/WebApplication800000.csproj
+++ b/WebApplication800000/WebApplication800000.csproj
@@ -266,6 +266,7 @@
     <Content Include="Views\Customers\Login.cshtml" />
     <Content Include="Views\Home\Checkout.cshtml" />
     <Content Include="Views\Product\BuyProducts.cshtml" />
+    <Content Include="Views\Product\AfterBuyProducts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
