--- a/WebApplication800000/WebApplication800000.csproj
+++ b/WebApplication800000/WebApplication800000.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Data\Connections.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -210,6 +211,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\OrderModels.cs" />
     <Compile Include="Models\ProductModels.cs" />
+    <Compile Include="Models\UserModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -278,6 +280,8 @@
     <Content Include="Views\Home\Checkout.cshtml" />
     <Content Include="Views\Product\BuyProducts.cshtml" />
     <Content Include="Views\Product\AfterBuyProducts.cshtml" />
+    <Content Include="Views\Product\Wishlist.cshtml" />
+    <Content Include="Views\Product\Userwishlist.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
