--- a/WebApplication800000/WebApplication800000.csproj
+++ b/WebApplication800000/WebApplication800000.csproj
@@ -282,6 +282,7 @@
     <Content Include="Views\Product\AfterBuyProducts.cshtml" />
     <Content Include="Views\Product\Wishlist.cshtml" />
     <Content Include="Views\Product\Userwishlist.cshtml" />
+    <Content Include="Views\Customers\OrderHistory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
