--- a/WebApplication800000/WebApplication800000.csproj
+++ b/WebApplication800000/WebApplication800000.csproj
@@ -283,6 +283,8 @@
     <Content Include="Views\Product\Wishlist.cshtml" />
     <Content Include="Views\Product\Userwishlist.cshtml" />
     <Content Include="Views\Customers\OrderHistory.cshtml" />
+    <Content Include="Views\Product\Favoritelist.cshtml" />
+    <Content Include="Views\Product\FavoritelistShow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
